--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
-@import "tailwindcss";
-@plugin "daisyui";
-
 #root {
   margin: 0 auto;
-  padding: 2rem 1.5rem;
-  height: 100vh;
+  padding: 1rem 1rem;
+  height: 100%;
+  overflow: hidden;
 }
 
