--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,11 @@
   /* background-color: #3b82f6 !important;
   border-color: #2563eb !important; */
 }
+
+.no-outline {
+  outline: none;
+}
+
+.list-row::after {
+  border-color: rgba(0,0,0,0.1) !important; /* Используем переменные DaisyUI */
+}
