--- a/src/pages/MainPage/styles.css
+++ b/src/pages/MainPage/styles.css
@@ -1,5 +1,7 @@
 .main-page-container {
   position: relative;
+  font-family: "Russo One", sans-serif;
+  color: rgb(235, 235, 235);
 }
 .main-page-container::after {
   content: '';
@@ -29,8 +31,8 @@
 }
 .hat-icon {
   position: absolute;
-  right: -25px;
-  top: -20px;
+  right: -22px;
+  top: -18px;
   width: 50px;
   height: 50px;
   margin-left: 10px;
